# Rapid-Solution-of-Cosserat-Equations

./: Cosserat_Rod_with_Observer.m  README.md
ctr_model/: CMakeLists.txt  package.xml
ctr_model/cfg/: MyParams.cfg
ctr_model/include/ctr_model/: Calculation.hpp  CtrModel.hpp
ctr_model/launch/: config.rviz  ctr_model.launch  marker.rviz
ctr_model/src/: Calculation.cpp  CtrModel.cpp  ctr_model_node.cpp
ctr_model/urdf/: ctr_model.xacro
